--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@ django-cors-headers==4.3.1
 gnews==0.2.6
 joblib==1.4.2
 nltk==3.8.1
-numpy==1.21.6
-pandas==1.5.3
+numpy>=1.24.0,<1.25.0
+pandas>=2.0.0,<2.1.0
 requests==2.31.0
-scikit-learn==1.1.3
-setuptools==65.5.0
+scikit-learn>=1.3.0,<1.4.0
+setuptools>=65.0.0
 yfinance==0.2.38
 gunicorn==21.2.0
 whitenoise==6.6.0
