--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
+beautifulsoup4==4.12.3
 Django==5.0.6
 djangorestframework==3.15.1
 django-cors-headers==4.3.1
+gnews==0.2.6
+joblib==1.4.2
+nltk==3.8.1
+numpy==1.24.3
+pandas==2.0.3
+pandas-ta==0.3.14b0
 requests==2.31.0
+scikit-learn==1.3.0
+setuptools==69.5.1
 yfinance==0.2.38
 gunicorn==21.2.0
 whitenoise==6.6.0
