--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
-beautifulsoup4==4.12.3
+# Core Django packages
 Django==5.0.6
 djangorestframework==3.15.1
 django-cors-headers==4.3.1
-gnews==0.2.6
-joblib==1.4.2
-nltk==3.8.1
+
+# Database packages
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
+
+# Data processing packages
 numpy==1.24.3
 pandas==2.0.3
-pandas-ta==0.3.14b0
-requests==2.31.0
+pandas-ta>=0.3.0,<0.4.0
 scikit-learn==1.3.0
-setuptools==69.5.1
+joblib==1.4.2
+
+# Web scraping and API packages
+requests==2.31.0
+beautifulsoup4==4.12.3
+gnews==0.2.6
 yfinance==0.2.38
+
+# NLP packages
+nltk==3.8.1
+
+# Configuration packages
+python-decouple==3.8
+
+# Production server packages
 gunicorn==21.2.0
 whitenoise==6.6.0
-psycopg2-binary==2.9.9
-python-decouple==3.8
-dj-database-url==2.1.0
+
+# Build tools
+setuptools==69.5.1
