--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ scikit-learn==1.3.0
 joblib==1.4.2
 
 # Web scraping and API packages
-requests==2.31.0
+requests>=2.26.0,<3.0.0
 beautifulsoup4>=4.9.3,<4.13.0
 gnews==0.2.6
 yfinance==0.2.38
