--- a/env.example
+++ b/env.example
@@ -25,7 +25,9 @@ REDIS_URL=redis://localhost:6379/1
 # Security Settings
 CORS_ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
 
-# API Keys (if needed)
+# API Keys for Stock Data
+ALPHA_VANTAGE_API_KEY=your-alpha-vantage-api-key
+IEX_CLOUD_API_KEY=your-iex-cloud-api-key
 YAHOO_FINANCE_API_KEY=your-yahoo-api-key
 MFAPI_KEY=your-mfapi-key
 
