--- a/production.env
+++ b/production.env
@@ -27,3 +27,9 @@ CORS_ALLOWED_ORIGINS=https://your-app-name.railway.app,https://your-app-name.onr
 
 # Redis Cache (Optional)
 REDIS_URL=redis://localhost:6379/1
+
+# API Keys for Stock Data
+ALPHA_VANTAGE_API_KEY=your-alpha-vantage-api-key
+IEX_CLOUD_API_KEY=your-iex-cloud-api-key
+YAHOO_FINANCE_API_KEY=your-yahoo-api-key
+MFAPI_KEY=your-mfapi-key
