--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,10 +4,9 @@ nixPkgs = ["python311", "postgresql_16.dev", "gcc"]
 [phases.install]
 cmds = [
     "python -m venv --copies /opt/venv",
-    ". /opt/venv/bin/activate",
-    "pip install --upgrade pip",
-    "pip install -r requirements.txt"
+    ". /opt/venv/bin/activate && pip install --upgrade pip",
+    ". /opt/venv/bin/activate && pip install -r requirements.txt"
 ]
 
 [start]
-cmd = "gunicorn core.wsgi:application --bind 0.0.0.0:$PORT --workers 3 --timeout 120"
+cmd = ". /opt/venv/bin/activate && bash start.sh"
