--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,9 +4,10 @@ nixPkgs = ["python311", "postgresql_16.dev", "gcc"]
 [phases.install]
 cmds = [
     "python -m venv --copies /opt/venv",
-    ". /opt/venv/bin/activate && pip install --upgrade pip",
-    ". /opt/venv/bin/activate && pip install -r requirements.txt"
+    "source /opt/venv/bin/activate && pip install --upgrade pip",
+    "source /opt/venv/bin/activate && pip install -r requirements.txt",
+    "source /opt/venv/bin/activate && python -c 'import django; print(f\"Django {django.get_version()} installed successfully\")'"
 ]
 
 [start]
-cmd = ". /opt/venv/bin/activate && bash start.sh"
+cmd = "source /opt/venv/bin/activate && bash start.sh"
